tests/test_data/CodeStructureSnippets/bad/sem_err_3.2.ifj21
require "ifj21"

function main()
    local vysl : integer = 1
    local b : integer = 2
    local b : string
    vysl = vysl + b
    write("peepee: ", vysl)
end
main()
